Update swaggo version to v1.8.5
